<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="SaL-C2-2ft">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="YMJ-rF-88K" customClass="LoginViewController" customModule="UI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Eit-7s-iRb">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="xTS-sV-7jU">
                                <rect key="frame" x="85" y="40" width="205" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="bPF-gg-101"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOOOOOG IN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBk-xv-FMQ">
                                <rect key="frame" x="89" y="180" width="197" height="57.5"/>
                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="42"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="t6z-zb-wcy">
                                <rect key="frame" x="20" y="277" width="335" height="113"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qJL-Cg-k9g" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="39"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailFIeld"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Your e-mooooil"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <outlet property="delegate" destination="YMJ-rF-88K" id="9fq-1r-QRg"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DTF-Tn-4kw" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                        <rect key="frame" x="0.0" y="74" width="335" height="39"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Passwooord"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <outlet property="delegate" destination="YMJ-rF-88K" id="iUc-8c-5Bb"/>
                                        </connections>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiD-bz-nmV" customClass="RoundedBlueButton" customModule="UI" customModuleProvider="target">
                                <rect key="frame" x="60" y="431" width="255" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="goButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="C7B-Xh-Bnc"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
                                <state key="normal" title="GOOOOOOO">
                                    <color key="titleColor" name="BrandBlue"/>
                                </state>
                                <connections>
                                    <action selector="didTouchGoButton:" destination="YMJ-rF-88K" eventType="touchUpInside" id="kxN-t8-ruo"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" name="BrandYellow"/>
                        <constraints>
                            <constraint firstItem="xTS-sV-7jU" firstAttribute="centerX" secondItem="Eit-7s-iRb" secondAttribute="centerX" id="21K-GD-96j"/>
                            <constraint firstItem="xTS-sV-7jU" firstAttribute="top" secondItem="tRl-aL-65z" secondAttribute="top" constant="40" id="8oF-18-3uW"/>
                            <constraint firstItem="t6z-zb-wcy" firstAttribute="leading" secondItem="tRl-aL-65z" secondAttribute="leading" constant="20" id="Amp-B3-yQ5"/>
                            <constraint firstItem="hiD-bz-nmV" firstAttribute="top" secondItem="t6z-zb-wcy" secondAttribute="bottom" constant="41" id="BQH-fA-1eD"/>
                            <constraint firstItem="t6z-zb-wcy" firstAttribute="centerX" secondItem="Eit-7s-iRb" secondAttribute="centerX" id="GhQ-1l-f7h"/>
                            <constraint firstItem="eBk-xv-FMQ" firstAttribute="top" secondItem="xTS-sV-7jU" secondAttribute="bottom" constant="40" id="KVj-dr-kXA"/>
                            <constraint firstItem="tRl-aL-65z" firstAttribute="trailing" secondItem="hiD-bz-nmV" secondAttribute="trailing" constant="60" id="LQz-vy-iGE"/>
                            <constraint firstItem="t6z-zb-wcy" firstAttribute="centerY" secondItem="Eit-7s-iRb" secondAttribute="centerY" id="Maf-Yb-vrC"/>
                            <constraint firstItem="hiD-bz-nmV" firstAttribute="leading" secondItem="tRl-aL-65z" secondAttribute="leading" constant="60" id="URb-hr-nSM"/>
                            <constraint firstItem="eBk-xv-FMQ" firstAttribute="centerX" secondItem="Eit-7s-iRb" secondAttribute="centerX" id="Z7t-Qb-OLn"/>
                            <constraint firstItem="tRl-aL-65z" firstAttribute="trailing" secondItem="t6z-zb-wcy" secondAttribute="trailing" constant="20" id="tGX-kg-gaJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="tRl-aL-65z"/>
                    </view>
                    <connections>
                        <outlet property="mailTextField" destination="qJL-Cg-k9g" id="b00-w2-11j"/>
                        <outlet property="passwordTextField" destination="DTF-Tn-4kw" id="hgP-Ya-GxV"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Tia-sQ-0X4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-872.46376811594212" y="-152.00892857142856"/>
        </scene>
    </scenes>
    <resources>
        <image name="Icon" width="205" height="234"/>
        <namedColor name="BrandBlue">
            <color red="0.34099999070167542" green="0.50999999046325684" blue="0.73299998044967651" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="BrandYellow">
            <color red="1" green="0.99599999189376831" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
