...
                                    <constraint firstAttribute="height" constant="194" id="lXO-C5-ohW"/>
                                    <constraint firstItem="DGy-8H-LNs" firstAttribute="centerX" secondItem="aSu-kv-pbV" secondAttribute="centerX" id="ugW-T4-OKq"/>
                                </constraints>
                            </view>
                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gc2-An-4Zh" customClass="RoundedBlueButton" customModule="UI" customModuleProvider="target">
                                <rect key="frame" x="60" y="490" width="255" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="addAddressButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="F09-8K-Byl"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
                                <state key="normal" title="ADD ADDRESS">
                                    <color key="titleColor" name="BrandBlue"/>
...
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Xoj-EM-7EL">
                                <rect key="frame" x="20" y="194" width="335" height="276"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zCO-zC-KVv" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="39"/>
                                        <accessibility key="accessibilityConfiguration" identifier="address1"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Address line 1"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
